# neoSYCL

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  test.cpp
.github/workflows/: build.yml  ci.yml
cmake/: ExtProjectUtils.cmake
examples/: CMakeLists.txt  sequential_vector.cpp  single_task.cpp
examples/bfs/: CMakeLists.txt  bfs.cpp  bfs_sycl.cpp  bfs_veo.cpp  kernel.c
examples/bfs/inputGen/: gen_dataset.sh  graphgen.cpp
examples/computecpp/: CMakeLists.txt  accessors.cpp
examples/cpu/: CMakeLists.txt  sequential_vector.cpp
examples/nbody/: CMakeLists.txt  kernel.c  nbody.cpp
examples/sa/: CMakeLists.txt  sa.cpp
examples/sa/instances/: d1291.tsp  d1655.tsp  d198.tsp  d2103.tsp  d493.tsp
examples/stream/: CMakeLists.txt  SYCLStream.cpp  SYCLStream.h  kernel.c  main.cpp
examples/sycl-bench/: CMakeLists.txt  common.h  nbody.cpp
examples/sycl-bench/include/: command_line.h  common.h
examples/ve/: CMakeLists.txt  kernel.c  sequential_vector.cpp
include/CL/: sycl.hpp
include/CL/SYCL/: access.hpp  accessor.hpp  allocator.hpp  buffer.hpp  context.hpp  debug.hpp  device.hpp  device_selector.hpp  event.hpp  exception.hpp  extensions.hpp  handler.hpp  handler_event.hpp  id.hpp  item.hpp  platform.hpp  property_list.hpp  queue.hpp  range.hpp  types.hpp
include/CL/SYCL/buffer/: access_certificate.hpp  data_container.hpp  data_container_1d.hpp  data_container_2d.hpp  data_container_3d.hpp  data_container_nd.hpp
include/CL/SYCL/detail/: profiler.h  shared_ptr_implementation.hpp  threadpool.hpp
include/CL/SYCL/device/: cpu_device.hpp
include/CL/SYCL/device_selector/: accelerator_selector.hpp  cpu_selector.hpp  default_selector.hpp  gpu_selector.hpp  host_selector.hpp
include/CL/SYCL/info/: context.hpp  device_type.hpp  param_traits.hpp  platform.hpp  queue.hpp
include/CL/SYCL/kernel/: highlight_func.hpp  kernel.hpp  kernel_arg.hpp  task.hpp
include/CL/SYCL/nec/: offload_driver.hpp  ve_device.hpp  ve_info.hpp  ve_kernel.hpp  ve_queue.hpp  ve_selector.hpp  ve_task.hpp
include/CL/SYCL/queue/: task_queue.hpp
include/neoSYCL/: sycl.hpp
include/neoSYCL/extensions/nec/: device.hpp  kernel.hpp  program.hpp  rt_acc.hpp  ve_context_info.hpp  ve_device.hpp  ve_device_info.hpp  ve_info.hpp  ve_kernel.hpp  ve_kernel_info.hpp  ve_queue.hpp  ve_selector.hpp  ve_task.hpp  ve_task_handler.hpp  veo_util.hpp
include/neoSYCL/kout/: Kout.hpp  KoutPrinterHelper.hpp  KoutVisitor.hpp  VarDeclFinder.hpp
include/neoSYCL/sycl/: access.hpp  accessor.hpp  accessor_impl.hpp  allocator.hpp  atomic.hpp  buffer.hpp  context.hpp  debug.hpp  device.hpp  device_selector.hpp  event.hpp  exception.hpp  extensions.hpp  handler.hpp  handler_event.hpp  id.hpp  id_tail.hpp  item.hpp  kernel.hpp  nd_range.hpp  op_def.hpp  platform.hpp  program.hpp  property_list.hpp  queue.hpp  range.hpp  types.hpp
include/neoSYCL/sycl/buffer/: data_container.hpp  data_container_2d.hpp  data_container_3d.hpp
include/neoSYCL/sycl/builtin/: builtin.hpp  common.hpp  geometric.hpp  math.hpp  op_defs.hpp  relational.hpp  vec.hpp
include/neoSYCL/sycl/container/: array_nd.hpp  containers.hpp  data_container.hpp  data_container_1d.hpp  data_container_2d.hpp  data_container_3d.hpp  data_container_nd.hpp
include/neoSYCL/sycl/detail/: accessor_data.hpp  accessor_info.hpp  context.hpp  context_info.hpp  debug.hpp  device.hpp  device_info.hpp  device_type.hpp  futures.hpp  handler.hpp  highlight_func.hpp  kernel.hpp  kernel_arg.hpp  kernel_info.hpp  platform.hpp  platform_info.hpp  program.hpp  registered_platforms.hpp  shared_ptr_implementation.hpp  task.hpp  task_counter.hpp  task_handler.hpp
include/neoSYCL/sycl/detail/builtin/: builtin.hpp  common.hpp  geometric.hpp  integer.hpp  math.hpp  op_defs.hpp  relational.hpp  vec.hpp
include/neoSYCL/sycl/detail/container/: array_nd.hpp  buffer_container.hpp  data_container.hpp  data_container_nd.hpp
include/neoSYCL/sycl/detail/cpu/: device.hpp  kernel.hpp  program.hpp
include/neoSYCL/sycl/detail/runtime/: acc.hpp
include/neoSYCL/sycl/device/: cpu_device.hpp
include/neoSYCL/sycl/device_selector/: accelerator_selector.hpp  cpu_selector.hpp  default_selector.hpp  gpu_selector.hpp  host_selector.hpp
include/neoSYCL/sycl/info/: context.hpp  device.hpp  device_type.hpp  kernel.hpp  param_traits.hpp  platform.hpp  program.hpp  queue.hpp
include/neoSYCL/sycl/kernel/: kernel.hpp  kernel_arg.hpp  task.hpp
include/neoSYCL/sycl/nec/: ve_info.hpp  ve_queue.hpp  ve_selector.hpp  ve_task.hpp
include/neoSYCL/sycl/queue/: task_queue.hpp
include/neoSYCL/sycl/runtime/: acc.hpp
kernel_generator/: CMakeLists.txt
kernel_generator/include/: exceptions.h  helpers.h  kernel.h  kernel_translator.h  parallel_task.h  single_task.h  ve_kernel_translator.h
kernel_generator/src/: CMakeLists.txt  clang_tool.cpp  kernel.cpp  parallel_task.cpp  single_task.cpp  ve_kernel_translator.cpp
src/: CMakeLists.txt  KoutPrinterHelper.cpp  KoutVisitor.cpp  VarDeclFinder.cpp  main.cpp  nsc++.in  nsc++.py.in
src/stream/: CMakeLists.txt  kernel.c  main.cpp
tests/: CMakeLists.txt  test_accessor.cpp  test_buffer.cpp  test_container_1d.cpp  test_container_2d.cpp  test_container_3d.cpp  test_id.cpp  test_item.cpp  test_multi_thread.cpp  test_parallel_for.cpp  test_range.cpp  test_single_task.cpp  test_veosycl.sh
